--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <h3>
                 <span class="ptw-icon-laptop large-icon"></span>
                 Habilita pago en linea con asesor</h3>
-            <p><img src="Generando orden de pago_files/Sin título - copia.png" width="186" height="54" alt=""/></p>
+            <p><a href="Generando-orden-de-pago.html"><img src="Generando orden de pago_files/Sin título - copia.png" width="186" height="54" alt=""/></a></p>
             <div class="group">
                 <div class="fl"></div>
                 <div class="fl">
@@ -524,10 +524,10 @@
                     </tr>
                     <tr>
                       <td class="left logo" style="width:50px;"><img src="./Itinerario para Localizador 126372196_files/VB_logo.gif" /></td>
-                      <td><span>Sale: 06:00hrs</span>
+                      <td><span>Sale: 09:00hrs</span>
                         <p class="small">(MTY) Monterrey <br />
                           a</p></td>
-                      <td><span>Llega: 07:40hrs</span>
+                      <td><span>Llega: 10:40hrs</span>
                         <p class="small">(MEX) Mexico City <br />
                           1</p></td>
                       <td>Tiempo de vuelo: <br />
@@ -548,20 +548,20 @@
                       </div></td>
                     </tr>
                     <tr class="light">
-                      <td colspan="5"><div class="escala">Escala en Mexico City: <b>2hr 50min</b></div></td>
+                      <td colspan="5"><div class="escala">Escala en Mexico City: <b> 35min</b></div></td>
                     </tr>
                     <tr>
                       <td class="higLit" colspan="5">Viva Aerobus Vuelo 1150. Confirmación: <strong class="higLitbig"></strong></td>
                     </tr>
                     <tr>
                       <td class="left logo" style="width:50px;"><img src="./Itinerario para Localizador 126372196_files/VB_logo.gif" /></td>
-                      <td><span>Sale: 10:30hrs</span>
+                      <td><span>Sale: 11:15hrs</span>
                         <p class="small">(MEX) Mexico City <br />
                           1</p></td>
-                      <td><span>Llega: 11:15hrs</span>
+                      <td><span>Llega: 12:05hrs</span>
                         <p class="small">(MZT) Mazatlán</p></td>
                       <td>Tiempo de vuelo: <br />
-                        1hr 45min</td>
+                        2hr 05min</td>
                     </tr>
                     <tr>
                       <td colspan="10" class="passengers"></td>
@@ -614,11 +614,11 @@
                 <h4>Lista de pasajeros</h4>
                 <ol>
                   <li>MISS Nancy Rubio Martinez&nbsp;<span class="light">(adulto)</span></li>
-                  <li>MR Pendiente de asignar&nbsp;<span class="light">(adulto)</span></li>
-                  <li>MR Pendiente de asignar&nbsp;<span class="light">(adulto)</span></li>
-                  <li>MR Pendiente de asignar&nbsp;<span class="light">(adulto)</span></li>
-                  <li>MR Pendiente de asignar&nbsp;<span class="light">(adulto)</span></li>
-                  <li>MR Pendiente de asignar&nbsp;<span class="light">(adulto)</span></li>
+                  <li>MR Aldo Alan Palomino Rubio&nbsp;<span class="light">(adulto)</span></li>
+                  <li>MR Ivan Eduardo Palomino Rubio&nbsp;<span class="light">(adulto)</span></li>
+                  <li>MR Ricardo Jahir Palomino Rubio&nbsp;<span class="light">(adulto)</span></li>
+                  <li>MR Ricardo Palomino Garcia&nbsp;<span class="light">(adulto)</span></li>
+                  <li>MRS Arely Ramirez&nbsp;<span class="light">(adulto)</span></li>
                   <li></li>
                 </ol>
                 <p>&nbsp;</p>
