--- a/Pago de localizador 21470031 - PriceTravel MX.html
+++ b/Pago de localizador 21470031 - PriceTravel MX.html
@@ -263,7 +263,7 @@
                                <a href="#" class="button button--link" style="display : none" onclick="showMethodList(); event.preventDefault();"><i class="icon-arrow-back"></i>Cambiar forma de pago</a>
                                 <div id="creditCard" style="display ">
                                     <!--DIV de Detalle de forma de pago: Tarjeta bancaria-->
-                                    <h3 class="form-title">Tarjeta de crédito</h3>
+                                    <h3 class="form-title">Transferencia bancaria</h3>
                                         <input type="hidden" name="paymentInfo.selectedAgencyCreditCard" id="selectedAgencyCreditCard0" value="0">
 
                                     <p>1. Realizada la transferencia es neceario enviar el comprobante a su asesor</p>
