--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <div class="well">
             <h3>
                 <span class="ptw-icon-laptop large-icon"></span>
-                Habilita pago en linea con asesor</h3>
+                Pago en linea </h3>
             <p><a href="Generando-orden-de-pago.html"><img src="Generando orden de pago_files/Sin título - copia.png" width="186" height="54" alt=""/></a></p>
             <div class="group">
                 <div class="fl"></div>
